--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@ dominate>=2.4.0
 visdom>=0.1.8.8
 wandb
 h5py
-pytorch_msssim
-numpy==1.21.2
-matplotlib==3.4.3
-scikit-image==0.18.3
-scikit-learn==0.24.2
+numpy
+matplotlib
+scikit-image
+scikit-learn
